# istorage

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  api.go  blobid.go  blobid_test.go  catalog.go  client.go  common_config.go  config.docker.yaml  config.yaml  coordinator.go  coordinator_test.go  docker-compose.minio.yml  docker-compose.yml  go.mod  go.sum  heartbeat.go  httpx.go  image.go  server.go  store.go  store_test.go  types.go
api/: go.mod
api-service/: Cargo.toml
api-service/src/: api.rs  chunk_client.rs  config.rs  error.rs  lib.rs  main.rs  metadata_client.rs
api/cmd/api/: main.go
api/cmd/api-service/: main.go
api/internal/api/: server.go
api/internal/chunk/: client.go
api/internal/config/: config.go
api/internal/errors/: errors.go
api/internal/metadata/: client.go
api/internal/model/: model.go
chunk/: go.mod
chunk/cmd/chunker/: main.go
chunk/internal/config/: config.go
chunk/internal/httpapi/: router.go
chunker/: Cargo.toml
chunker/src/: http.rs  main.rs  settings.rs
cmd/coordinator/: main.go
cmd/volume/: main.go
deploy/: Dockerfile  config.docker.yaml  config.yaml  docker-compose.multi.yml  docker-compose.single.yml  docker-compose.yml
deploy/configs/: coordinator.yaml  volume.yaml
deploy/docker/: Dockerfile
e2e/: concurrent_same_key_test.py  control_plane_test.py  core_data_path_test.py  multi_object_integration_test.py  range_get_integration_test.py  repeated_chunk_regression_test.py  runall.sh  sharding_smoke_test.py  special_keys_and_delete_test.py
e2e/bench/: benchmark_custom.py  benchmark_minio.py
internal/common/: blobid.go  blobid_test.go  config.go  httpx.go  image.go  types.go
internal/coordinator/: catalog.go  client.go  config.go  http.go  registry.go  registry_test.go
internal/volume/: config.go  heartbeat.go  http.go  store.go  store_test.go
metadata/: Cargo.toml  go.mod  go.sum
metadata/cmd/metadata/: main.go
metadata/internal/chunk/: client.go
metadata/internal/chunkers/: health_checker.go  registry.go
metadata/internal/config/: config.go
metadata/internal/gc/: worker.go
metadata/internal/httpapi/: router.go
metadata/internal/model/: model.go
metadata/internal/service/: service.go
metadata/internal/store/fdb/: store.go
metadata/migrations/: 0001_init.sql  0002_chunker_sharding.sql
metadata/src/: health_manager.rs  http.rs  lib.rs  main.rs  repo.rs  settings.rs
scripts/: benchmark_parallel_put_get.py  compose.multi.yml  compose.single.yml  pagination_integration_test.py  run_integration_tests.sh  sharding_smoke_test.py  smoke_test.py  video_smoke_test.py
scripts/configs/: coordinator.yaml  volume.yaml
(+10 files in other folders)
