[package]
name = "api-service"
version = "0.1.0"
edition = "2021"

[dependencies]
metadata = { path = "../metadata" }
axum = { version = "0.7", features = ["json", "body"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
urlencoding = "2"
hex = "0.4"
