[package]
name = "chunker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["body"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
rocksdb = "0.22"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
